--- a/.gitignore
+++ b/.gitignore
@@ -2,8 +2,10 @@ gencode.v29.primary_assembly.annotation_UCSC_names.gtf
 .DS_Store
 bigWigToBedGraph
 __pycache__/
+cedar_runs/
 data/
 chmmisuue/
+segway_runs/
 batch_runs/
 segway_runs/
 ChromHMM/
