--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,7 @@
-gencode.v29.primary_assembly.annotation_UCSC_names.gtf
-.DS_Store
+'
 bigWigToBedGraph
 __pycache__/
-cedar_runs/
-data/
-chmmisuue/
-segway_runs/
-batch_runs/
-segway_runs/
-ChromHMM/
-files/
-reprod_results/
-test_files/
+legacy/
 tests/
-TEST_REPR/
+biovalidation/gencode.v29.primary_assembly.annotation_UCSC_names.gtf
+biointerpret/gencode.v29.primary_assembly.annotation_UCSC_names.gtf
