--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,8 @@ legacy/reprod_results
 files/
 tests/
 src/biovalidation/gencode.v29.primary_assembly.annotation_UCSC_names.gtf
+src/biovalidation/RNA_seq/
+src/biovalidation/
 src/biointerpret/gencode.v29.primary_assembly.annotation_UCSC_names.gtf
 src/__pycache__/
 ChromHMM/
